bdr.BDR.scala.error
Erreur de compilation :
BDR:1: error: Missing closing brace `}' assumed here
var fini = false
^BDR:3: error: identifier expected but string literal found.
  if (litMessage():"R")
                   ^BDR:32: error: ')' expected but '}' found.
	}
        ^